Main structure of home page built

--- a/index.html
+++ b/index.html
@@ -29,12 +29,48 @@
         <div class="masthead-title">
             <h1>AUDI R8</h1>
             <h2>(2006-2023)</h2>
-
         </div>
+    </section>
 
-
+    <!-- timeline -->
+    <section class="timeline">
 
     </section>
+
+    <!-- closeup audi logo -->
+    <section class="close-up-logo">
+
+    </section>
+
+    <!-- customize -->
+    <section class="customize">
+
+    </section>
+
+    <!-- closeup wheel -->
+    <section class="close-up-wheel">
+
+    </section>
+
+    <!-- season-proof -->
+    <section class="season-proof">
+
+    </section>
+
+    <!-- tbd -->
+    <section class="tbd">
+
+    </section>
+
+    <!-- test-drive -->
+    <section class="test-drive">
+        <video class="video-bg" autoplay loop muted poster="">
+            <source src="./video/r8-test-drive.mp4" type="video/mp4">
+        </video>
+
+    </section>
+
+
 </main>
 <footer>
 
