--- a/index.html
+++ b/index.html
@@ -10,10 +10,7 @@
     <link rel="stylesheet" href="./css/styles.css">
     <!-- remove custom browser styles -->
     <link rel="stylesheet" href="./css/normalize.css">
-    <!-- Google Fonts -->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alumni+Sans&family=Chakra+Petch:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <!-- JS -->
     <script src="./js/main.js" defer></script>
 </head>
 <body>
@@ -28,13 +25,128 @@
         </div>
         <div class="masthead-title">
             <h1>AUDI R8</h1>
-            <h2>(2006-2023)</h2>
+            <h2>(2007-2023)</h2>
         </div>
     </section>
 
     <!-- timeline -->
+    <!-- source: https://www.autoevolution.com/audi/r8/ -->
     <section class="timeline">
 
+        <h2>The R8 Over the Years</h2>
+
+        <div class="timeline-container">
+            <span class="timeline-bar"></span>
+            <!-- Model 1 -->
+            <div class="timeline-element timeline-left">
+                <div>
+                    <img src="img/r8-model1.jpg" alt="black Audi R8 (2007-2012 model)">
+                    <h3>Audi R8 V8</h3>
+                    <small>2007-2012</small>
+                    <p>In 2006, Audi introduced the first generation of the R8: a 420HP V8 2-seat
+                        all-wheel drive supercar. The car was small, lightweight,
+                        and originally available as a coupe (the Spyder model came later in 2008). This first 2007 model
+                    was available in both a 6-speed manual transmission and a 6-speed automatic transmission.</p>
+                    <span class="left-arrow"></span>
+                </div>
+            </div>
+
+            <!-- Model 2 -->
+            <div class="timeline-element timeline-right">
+                <div>
+                    <img src="img/r8-model2.jpg" alt="Audi R8 (2008-2012 model)">
+                    <h3>Audi R8 V10</h3>
+                    <small>2008-2012</small>
+                    <p>While very similar to the existing 2007 R8 model, Audi then came out with a V10 version in 2008. With
+                    this model, the headlights received an LED system upgrade, along with some chrome accents
+                    on the grill frame. Audi also installed a multimedia information display which connected to the Bang & Olufsen sound system.
+                    </p>
+                    <span class="right-arrow"></span>
+                </div>
+            </div>
+
+            <!-- Model 3 -->
+            <div class="timeline-element timeline-left">
+                <div>
+                    <img src="img/r8-model3.jpg" alt="Audi R8 (2012-2015 model)">
+                    <h3>Audi R8 V8</h3>
+                    <small>2012-2015</small>
+                    <p>In 2012, Audi introduced a mild facelift for the R8. The car
+                    received some enhancements, including full LED headlights and taillights. </p>
+                    <span class="left-arrow"></span>
+                </div>
+            </div>
+
+            <!-- Model 4 -->
+            <div class="timeline-element timeline-right">
+                <div>
+                    <img src="img/r8-model4.jpg" alt="Audi R8 (2012-2015 model)">
+                    <h3>Audi R8 V10</h3>
+                    <small>2012-2015</small>
+                    <p>This Audi R8 generation features a 5.2-liter V10 engine
+                        (borrowed from the Lamborghini Gallardo). With
+                        this engine, the R8 could can to 100 kph in 3.7 seconds, and
+                        reach a top speed of 318 km/h!
+                    </p>
+                    <span class="right-arrow"></span>
+                </div>
+            </div>
+
+            <!-- Model 5 -->
+            <div class="timeline-element timeline-left">
+                <div>
+                    <img src="img/r8-model5.jpg" alt="Audi R8 (2015-2018 model)">
+                    <h3>Audi R8</h3>
+                    <small>2015-2018</small>
+                    <p>In 2015, Audi introduced the second generation of the Audi R8, which received
+                        a completely new look. Audi also got rid of the V8 engine and manual transmission.
+                    The sleek new look also featured a high-tech interior, as well as sport-bucket seats.</p>
+                    <span class="left-arrow"></span>
+                </div>
+            </div>
+
+            <!-- Model 6 -->
+            <div class="timeline-element timeline-right">
+                <div>
+                    <img src="img/r8-model6.jpg" alt="Audi R8 (2017-2021 model)">
+                    <h3>AUDI R8 V10 RWS</h3>
+                    <small>2017-2021</small>
+                    <p>One of the biggest changes Audi made in 2017 was introducing a rear-wheel drive R8. Although the car's
+                        appearance was very similar to the previous model, it featured some small changes such as a black upper
+                        side blade, and an optional red strip that crossed the top of the car.
+                    </p>
+                    <span class="right-arrow"></span>
+                </div>
+            </div>
+
+            <!-- Model 7 -->
+            <div class="timeline-element timeline-left">
+                <div>
+                    <img src="img/r8-model7.jpg" alt="Audi R8 (2018-2023 model)">
+                    <h3>Audi R8 Coupe</h3>
+                    <small>2018-Present</small>
+                    <p>In 2018, the second generation R8 received a facelift. In addition, the
+                    car's 5.2-liter V10 engine received some improvements with the regular R8 V10 Coupe now
+                        delivering 570HP (as opposed to the previous 540), and the R8 V10 Coupe Performance
+                        now delivering 620HP (as opposed to the previous 610). </p>
+                    <span class="left-arrow"></span>
+                </div>
+            </div>
+
+            <!-- Model 8 -->
+            <div class="timeline-element timeline-right">
+                <div>
+                    <img src="img/r8-model8.jpg" alt="Audi R8 (2021-2023 model)">
+                    <h3>AUDI R8 V10 performance RWD</h3>
+                    <small>2021-Present</small>
+                    <p>In 2021, Audi launched its rear-wheel drive Performance version due to the
+                        success that the rear-wheel drive model had received. This version also received
+                        some small appearance changes such as a mate-black singleframe grill.
+                    </p>
+                    <span class="right-arrow"></span>
+                </div>
+            </div>
+        </div>
     </section>
 
     <!-- closeup audi logo -->
@@ -64,7 +176,7 @@
 
     <!-- test-drive -->
     <section class="test-drive">
-        <video class="video-bg" autoplay loop muted poster="">
+        <video class="video-bg" autoplay loop muted playsinline>
             <source src="./video/r8-test-drive.mp4" type="video/mp4">
         </video>
 
