Added car customization images

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- source: https://www.autoevolution.com/audi/r8/ -->
     <section class="timeline">
 
-        <h2>The R8 Over the Years</h2>
+        <h2>Audi R8 Over the Years</h2>
 
         <div class="timeline-container">
             <span class="timeline-bar"></span>
@@ -83,7 +83,7 @@
                     <img src="img/r8-model4.jpg" alt="Audi R8 (2012-2015 model)">
                     <h3>Audi R8 V10</h3>
                     <small>2012-2015</small>
-                    <p>This Audi R8 generation features a 5.2-liter V10 engine
+                    <p>This Audi R8 model features a 5.2-liter V10 engine
                         (borrowed from the Lamborghini Gallardo). With
                         this engine, the R8 could can to 100 kph in 3.7 seconds, and
                         reach a top speed of 318 km/h!
@@ -156,6 +156,10 @@
 
     <!-- customize -->
     <section class="customize">
+        <h2>Customize Your 2023 Audi R8</h2>
+        <h3>Starting at $160,000</h3>
+
+
 
     </section>
 
