Started the customize car functionality

--- a/index.html
+++ b/index.html
@@ -158,9 +158,32 @@
     <section class="customize">
         <h2>Customize Your 2023 Audi R8</h2>
         <h3>Starting at $160,000</h3>
-
-
-
+        <div class="car-trim-btn-container">
+            <a class="car-trim-btn selected-btn"><div>Coupe</div></a>
+            <a class="car-trim-btn unselected-btn"><div>Spyder</div></a>
+        </div>
+        <img class="customize-img" src="./img/customize/r8-cp-bk-bk.jpg" alt="black coupe R8 with black rims">
+        <!-- color selector -->
+        <div class="color-selector-container">
+            <div class="color-bar">
+                <span class="color-option-container selected"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+            </div>
+        </div>
+        <small id="color-choice">Black</small>
+        <!-- wheel selector -->
+        <div class="wheel-selector-container">
+            <img class="selected" src="./img/black-wheel.png" alt="car wheel with black rims">
+            <img src="./img/gold-wheel.png" alt="car wheel with gold rims">
+        </div>
+        <small id="wheel-choice">Black rims</small>
+        <a class="buy-btn"><div>Buy Today</div></a>
     </section>
 
     <!-- closeup wheel -->
