Fixed bug in trimChange function (underline now appears on hover on inactive button)

--- a/index.html
+++ b/index.html
@@ -159,8 +159,8 @@
         <h2>Customize Your 2023 Audi R8</h2>
         <h3>Starting at $160,000</h3>
         <div class="car-trim-btn-container">
-            <a class="car-trim-btn selected-btn"><div>Coupe</div></a>
-            <a class="car-trim-btn unselected-btn"><div>Spyder</div></a>
+            <div class="car-trim-btn selected-btn"><div>Coupe</div></div>
+            <div class="car-trim-btn unselected-btn"><div>Spyder</div></div>
         </div>
         <img class="customize-img" src="./img/customize/r8-cp-bk-bk.jpg" alt="black coupe R8 with black rims">
         <!-- color selector -->
@@ -183,7 +183,7 @@
             <img src="./img/gold-wheel.png" alt="car wheel with gold rims">
         </div>
         <small id="wheel-choice">Black rims</small>
-        <a class="buy-btn"><div>Buy Today</div></a>
+        <a href="#" class="buy-btn"><div>Buy Today</div></a>
     </section>
 
     <!-- closeup wheel -->
