Customization section completed (finished the color text and wheel text functionality)

--- a/index.html
+++ b/index.html
@@ -29,6 +29,51 @@
         </div>
     </section>
 
+
+    <!-- customize -->
+    <!-- sources (images, color names, and rims/wheel names):
+    https://www.audi.ca/ca/web/en/models/r8/r8-spyder.html,
+    https://www.audi.ca/ca/web/en/models/r8/r8-coupe.html -->
+    <section class="customize">
+        <h2>Customize Your 2023 Audi R8</h2>
+        <h3>Starting at $160,000</h3>
+        <div class="car-trim-btn-container">
+            <div class="car-trim-btn selected-btn"><div>Coupe</div></div>
+            <div class="car-trim-btn unselected-btn"><div>Spyder</div></div>
+        </div>
+        <img class="customize-img" src="./img/customize/r8-cp-bk-bk.jpg" alt="black coupe R8 with black rims">
+        <!-- color selector -->
+        <div class="color-selector-container">
+            <div class="color-bar">
+                <span class="color-option-container selected"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+                <span class="color-option-container"><span class="color-option"></span></span>
+            </div>
+        </div>
+        <small id="color-choice">Mythos Black Metallic</small>
+        <!-- wheel selector -->
+        <div class="wheel-selector-container">
+            <img class="selected" src="./img/black-wheel.png" alt="car wheel with black rims">
+            <img src="./img/gold-wheel.png" alt="car wheel with gold rims">
+        </div>
+        <small id="wheel-choice">20" milled cut design, anthracite black wheels</small>
+        <a href="#" class="buy-btn"><div>Buy Today</div></a>
+    </section>
+
+
+
+    <!-- closeup audi logo -->
+    <section class="close-up-logo">
+
+    </section>
+
+
+
     <!-- timeline -->
     <!-- source: https://www.autoevolution.com/audi/r8/ -->
     <section class="timeline">
@@ -46,7 +91,7 @@
                     <p>In 2006, Audi introduced the first generation of the R8: a 420HP V8 2-seat
                         all-wheel drive supercar. The car was small, lightweight,
                         and originally available as a coupe (the Spyder model came later in 2008). This first 2007 model
-                    was available in both a 6-speed manual transmission and a 6-speed automatic transmission.</p>
+                        was available in both a 6-speed manual transmission and a 6-speed automatic transmission.</p>
                     <span class="left-arrow"></span>
                 </div>
             </div>
@@ -58,8 +103,8 @@
                     <h3>Audi R8 V10</h3>
                     <small>2008-2012</small>
                     <p>While very similar to the existing 2007 R8 model, Audi then came out with a V10 version in 2008. With
-                    this model, the headlights received an LED system upgrade, along with some chrome accents
-                    on the grill frame. Audi also installed a multimedia information display which connected to the Bang & Olufsen sound system.
+                        this model, the headlights received an LED system upgrade, along with some chrome accents
+                        on the grill frame. Audi also installed a multimedia information display which connected to the Bang & Olufsen sound system.
                     </p>
                     <span class="right-arrow"></span>
                 </div>
@@ -72,7 +117,7 @@
                     <h3>Audi R8 V8</h3>
                     <small>2012-2015</small>
                     <p>In 2012, Audi introduced a mild facelift for the R8. The car
-                    received some enhancements, including full LED headlights and taillights. </p>
+                        received some enhancements, including full LED headlights and taillights. </p>
                     <span class="left-arrow"></span>
                 </div>
             </div>
@@ -100,7 +145,7 @@
                     <small>2015-2018</small>
                     <p>In 2015, Audi introduced the second generation of the Audi R8, which received
                         a completely new look. Audi also got rid of the V8 engine and manual transmission.
-                    The sleek new look also featured a high-tech interior, as well as sport-bucket seats.</p>
+                        The sleek new look also featured a high-tech interior, as well as sport-bucket seats.</p>
                     <span class="left-arrow"></span>
                 </div>
             </div>
@@ -126,7 +171,7 @@
                     <h3>Audi R8 Coupe</h3>
                     <small>2018-Present</small>
                     <p>In 2018, the second generation R8 received a facelift. In addition, the
-                    car's 5.2-liter V10 engine received some improvements with the regular R8 V10 Coupe now
+                        car's 5.2-liter V10 engine received some improvements with the regular R8 V10 Coupe now
                         delivering 570HP (as opposed to the previous 540), and the R8 V10 Coupe Performance
                         now delivering 620HP (as opposed to the previous 610). </p>
                     <span class="left-arrow"></span>
@@ -149,42 +194,7 @@
         </div>
     </section>
 
-    <!-- closeup audi logo -->
-    <section class="close-up-logo">
 
-    </section>
-
-    <!-- customize -->
-    <section class="customize">
-        <h2>Customize Your 2023 Audi R8</h2>
-        <h3>Starting at $160,000</h3>
-        <div class="car-trim-btn-container">
-            <div class="car-trim-btn selected-btn"><div>Coupe</div></div>
-            <div class="car-trim-btn unselected-btn"><div>Spyder</div></div>
-        </div>
-        <img class="customize-img" src="./img/customize/r8-cp-bk-bk.jpg" alt="black coupe R8 with black rims">
-        <!-- color selector -->
-        <div class="color-selector-container">
-            <div class="color-bar">
-                <span class="color-option-container selected"><span class="color-option"></span></span>
-                <span class="color-option-container"><span class="color-option"></span></span>
-                <span class="color-option-container"><span class="color-option"></span></span>
-                <span class="color-option-container"><span class="color-option"></span></span>
-                <span class="color-option-container"><span class="color-option"></span></span>
-                <span class="color-option-container"><span class="color-option"></span></span>
-                <span class="color-option-container"><span class="color-option"></span></span>
-                <span class="color-option-container"><span class="color-option"></span></span>
-            </div>
-        </div>
-        <small id="color-choice">Black</small>
-        <!-- wheel selector -->
-        <div class="wheel-selector-container">
-            <img class="selected" src="./img/black-wheel.png" alt="car wheel with black rims">
-            <img src="./img/gold-wheel.png" alt="car wheel with gold rims">
-        </div>
-        <small id="wheel-choice">Black rims</small>
-        <a href="#" class="buy-btn"><div>Buy Today</div></a>
-    </section>
 
     <!-- closeup wheel -->
     <section class="close-up-wheel">
