Audi Quattro section complete, also added a new masthead image

--- a/index.html
+++ b/index.html
@@ -20,9 +20,7 @@
 <main>
     <!-- masthead -->
     <section class="masthead">
-        <div class="masthead-image">
-
-        </div>
+        <div class="masthead-image" id="home-masthead-img"></div>
         <div class="masthead-title">
             <h1>AUDI R8</h1>
             <h2>(2007-2023)</h2>
@@ -99,7 +97,7 @@
             <!-- Model 2 -->
             <div class="timeline-element timeline-right">
                 <div>
-                    <img src="img/r8-model2.jpg" alt="Audi R8 (2008-2012 model)">
+                    <img src="./img/r8-model2.jpg" alt="Audi R8 (2008-2012 model)">
                     <h3>Audi R8 V10</h3>
                     <small>2008-2012</small>
                     <p>While very similar to the existing 2007 R8 model, Audi then came out with a V10 version in 2008. With
@@ -113,7 +111,7 @@
             <!-- Model 3 -->
             <div class="timeline-element timeline-left">
                 <div>
-                    <img src="img/r8-model3.jpg" alt="Audi R8 (2012-2015 model)">
+                    <img src="./img/r8-model3.jpg" alt="Audi R8 (2012-2015 model)">
                     <h3>Audi R8 V8</h3>
                     <small>2012-2015</small>
                     <p>In 2012, Audi introduced a mild facelift for the R8. The car
@@ -125,7 +123,7 @@
             <!-- Model 4 -->
             <div class="timeline-element timeline-right">
                 <div>
-                    <img src="img/r8-model4.jpg" alt="Audi R8 (2012-2015 model)">
+                    <img src="./img/r8-model4.jpg" alt="Audi R8 (2012-2015 model)">
                     <h3>Audi R8 V10</h3>
                     <small>2012-2015</small>
                     <p>This Audi R8 model features a 5.2-liter V10 engine
@@ -140,7 +138,7 @@
             <!-- Model 5 -->
             <div class="timeline-element timeline-left">
                 <div>
-                    <img src="img/r8-model5.jpg" alt="Audi R8 (2015-2018 model)">
+                    <img src="./img/r8-model5.jpg" alt="Audi R8 (2015-2018 model)">
                     <h3>Audi R8</h3>
                     <small>2015-2018</small>
                     <p>In 2015, Audi introduced the second generation of the Audi R8, which received
@@ -153,7 +151,7 @@
             <!-- Model 6 -->
             <div class="timeline-element timeline-right">
                 <div>
-                    <img src="img/r8-model6.jpg" alt="Audi R8 (2017-2021 model)">
+                    <img src="./img/r8-model6.jpg" alt="Audi R8 (2017-2021 model)">
                     <h3>AUDI R8 V10 RWS</h3>
                     <small>2017-2021</small>
                     <p>One of the biggest changes Audi made in 2017 was introducing a rear-wheel drive R8. Although the car's
@@ -167,7 +165,7 @@
             <!-- Model 7 -->
             <div class="timeline-element timeline-left">
                 <div>
-                    <img src="img/r8-model7.jpg" alt="Audi R8 (2018-2023 model)">
+                    <img src="./img/r8-model7.jpg" alt="Audi R8 (2018-2023 model)">
                     <h3>Audi R8 Coupe</h3>
                     <small>2018-Present</small>
                     <p>In 2018, the second generation R8 received a facelift. In addition, the
@@ -181,7 +179,7 @@
             <!-- Model 8 -->
             <div class="timeline-element timeline-right">
                 <div>
-                    <img src="img/r8-model8.jpg" alt="Audi R8 (2021-2023 model)">
+                    <img src="./img/r8-model8.jpg" alt="Audi R8 (2021-2023 model)">
                     <h3>AUDI R8 V10 performance RWD</h3>
                     <small>2021-Present</small>
                     <p>In 2021, Audi launched its rear-wheel drive Performance version due to the
@@ -201,8 +199,33 @@
 
     </section>
 
-    <!-- season-proof -->
-    <section class="season-proof">
+    <!-- quattro -->
+    <section class="quattro">
+        <div class="snow-container">
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+            <span class="snowflake"></span>
+        </div>
+        <div class="quattro-text">
+            <h2>Audi Quattro</h2>
+            <h3>Experience the Quattro advantage!</h3>
+            <p>An all-wheel drive leading edge technology designed
+                to give you exceptional performance and control in all
+                seasons.</p>
+        </div>
+
 
     </section>
 
