Started the header

--- a/index.html
+++ b/index.html
@@ -15,7 +15,20 @@
 </head>
 <body>
 <header>
+    <div>
+        <!-- img -->
+    </div>
 
+    <div>
+        <nav>
+            <ul>
+                <li><a href="#">Home</a></li>
+                <li><a href="#">2023 Audi R8</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
+    </div>
 </header>
 <main>
     <!-- masthead -->
@@ -23,7 +36,7 @@
         <div class="masthead-image" id="home-masthead-img"></div>
         <div class="masthead-title">
             <h1>AUDI R8</h1>
-            <h2>(2007-2023)</h2>
+            <h2>The All-New 2023 Audi R8</h2>
         </div>
     </section>
 
@@ -76,7 +89,7 @@
     <!-- source: https://www.autoevolution.com/audi/r8/ -->
     <section class="timeline">
 
-        <h2>Audi R8 Over the Years</h2>
+        <h2>The Audi R8 Over the Years</h2>
 
         <div class="timeline-container">
             <span class="timeline-bar"></span>
@@ -220,7 +233,7 @@
         </div>
         <div class="quattro-text">
             <h2>Audi Quattro</h2>
-            <h3>Experience the Quattro advantage!</h3>
+            <h3>Experience the Quattro advantage</h3>
             <p>An all-wheel drive leading edge technology designed
                 to give you exceptional performance and control in all
                 seasons.</p>
@@ -229,9 +242,14 @@
 
     </section>
 
-    <!-- tbd -->
-    <section class="tbd">
-
+    <!-- specs -->
+    <section class="specs">
+        <div class="specs-details">
+            <h3><span>5.2L V-10</span> Engine.</h3>
+            <h3><span>562 @ 4,475 rpm</span> Horsepower.</h3>
+            <h3><span> 406 @ 6,300 rpm</span> Torque.</h3>
+            <small>*Select 2023 Audi R8 models</small>
+        </div>
     </section>
 
     <!-- test-drive -->
