Updated the "Starting at $..." text upon model selected

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     https://www.audi.ca/ca/web/en/models/r8/r8-coupe.html -->
     <section class="customize">
         <h2>Customize Your 2023 Audi R8</h2>
-        <h3>Starting at $160,000</h3>
+        <h3 id="price">Starting at $237,000</h3>
         <div class="car-trim-btn-container">
             <div class="car-trim-btn selected-btn"><div>Coupe</div></div>
             <div class="car-trim-btn unselected-btn"><div>Spyder</div></div>
