Header and footer complete

--- a/index.html
+++ b/index.html
@@ -12,11 +12,18 @@
     <link rel="stylesheet" href="./css/normalize.css">
     <!-- JS -->
     <script src="./js/main.js" defer></script>
+    <script src="https://kit.fontawesome.com/36e897625c.js" crossorigin="anonymous"></script>
 </head>
 <body>
 <header>
     <div>
-        <!-- img -->
+        <a href="index.html"><img src="./img/logo.png" alt="Audi R8 logo"></a>
+    </div>
+    <!-- hamburger -->
+    <div class="hamburger">
+        <span class="burger-bar"></span>
+        <span class="burger-bar"></span>
+        <span class="burger-bar"></span>
     </div>
 
     <div>
@@ -47,7 +54,7 @@
     https://www.audi.ca/ca/web/en/models/r8/r8-coupe.html -->
     <section class="customize">
         <h2>Customize Your 2023 Audi R8</h2>
-        <h3 id="price">Starting at $237,000</h3>
+        <h3 id="price">Starting at $158,600</h3>
         <div class="car-trim-btn-container">
             <div class="car-trim-btn selected-btn"><div>Coupe</div></div>
             <div class="car-trim-btn unselected-btn"><div>Spyder</div></div>
@@ -237,6 +244,7 @@
             <p>An all-wheel drive leading edge technology designed
                 to give you exceptional performance and control in all
                 seasons.</p>
+            <small>*Select 2023 Audi R8 models</small>
         </div>
 
 
@@ -246,8 +254,8 @@
     <section class="specs">
         <div class="specs-details">
             <h3><span>5.2L V-10</span> Engine.</h3>
-            <h3><span>562 @ 4,475 rpm</span> Horsepower.</h3>
-            <h3><span> 406 @ 6,300 rpm</span> Torque.</h3>
+            <h3><span>602 @ 8100 rpm</span> Horsepower.</h3>
+            <h3><span>413 lb-ft @ 6700 rpm</span> Torque.</h3>
             <small>*Select 2023 Audi R8 models</small>
         </div>
     </section>
@@ -264,9 +272,27 @@
     </section>
 
 
+
 </main>
 <footer>
-
+    <div class="address-container">
+        <div><i class="fa-solid fa-phone"></i><small>+1 (888)-888-AUDI</small></div>
+        <div><i class="fa-solid fa-envelope"></i><small>info@audir8.com</small></div>
+        <div><i class="fa-solid fa-location-dot"></i><address>
+            8 Race Track Rd<br>
+            Audi City, ON<br>
+            R8R 8R8
+        </address></div>
+    </div>
+    <div class="img-container">
+        <img src="./img/logo.png" alt="R8 logo">
+        <img src="./img/audi-logo.png" alt="Audi logo">
+    </div>
+    <div class="copyright-container">
+        <a href="#">Terms and Conditions</a>
+        <a href="#">Privacy Policy</a>
+        <small>Copyright © 2023</small>
+    </div>
 </footer>
 
 </body>
