--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
 <header>
+
     <div>
         <a href="index.html"><img src="./img/logo.png" alt="Audi R8 logo"></a>
     </div>
@@ -36,8 +37,12 @@
             </ul>
         </nav>
     </div>
+
 </header>
+
+
 <main>
+<div class="wrapper"></div>
     <!-- masthead -->
     <section class="masthead">
         <div class="masthead-image" id="home-masthead-img"></div>
@@ -271,6 +276,12 @@
         </div>
     </section>
 
+    <section class="inventory">
+        <h2>Pre-Owned Inventory</h2>
+       <h3>Buy with confidence with Audi Certified: Plus</h3>
+        <a href="#" >Browse Pre-Owned Inventory</a>
+
+    </section>
 
 
 </main>
