Completed homepage (not responsive yet), header and footer

--- a/index.html
+++ b/index.html
@@ -278,8 +278,16 @@
 
     <section class="inventory">
         <h2>Pre-Owned Inventory</h2>
-       <h3>Buy with confidence with Audi Certified: Plus</h3>
-        <a href="#" >Browse Pre-Owned Inventory</a>
+       <h3>Buy with confidence with Audi Certified: <span class="plus">plus</span></h3>
+        <p>Buying with Audi Certified: <span class="plus">plus</span> ensures your vehicle meets
+        Audi standards. Our rigorous inspection process includes mulitple checkpoints on the
+            exterior, interior, engine, undercarriage, and road. You also receive a warranty up to 5 years,
+            or up to 100,000 km from the original in-service date.
+        </p>
+        <div class="inventory-btn-container">
+            <a href="#" >Learn More</a>
+            <a href="#" >Browse Pre-Owned Inventory</a>
+        </div>
 
     </section>
 
