--- a/about.html
+++ b/about.html
@@ -30,10 +30,10 @@
     <div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">2023 Audi R8</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">2023 Audi R8</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
@@ -53,7 +53,7 @@
         <h2>About the Audi R8</h2>
         <p>The Audi R8 is a 2-seater supercar, originally introduced in 2006.
             The mid-engine supercar features a 5.2L V-10 engine, and develops 562 hp and 406 lb-ft of torque (select models).
-        It is currently available as a coupe or a convertible (spyder), and available in Audi's
+        It is currently available as a coupe or a convertible (spyder), and with Audi's
         all-wheel drive system: quattro.</p>
     </section>
 
