--- a/contact.html
+++ b/contact.html
@@ -30,10 +30,10 @@
     <div>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">2023 Audi R8</a></li>
-                <li><a href="#">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="product.html">2023 Audi R8</a></li>
+                <li><a href="about.html">About</a></li>
+                <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
     </div>
