Made some changes to the product page

--- a/product.html
+++ b/product.html
@@ -79,8 +79,10 @@
             <img src="./img/gold-wheel.png" alt="car wheel with gold rims">
         </div>
         <small id="wheel-choice">20" milled cut design, anthracite black wheels</small>
-
+        <a href="#" class="buy-btn"><div>Buy Today</div></a>
     </section>
+
+    <section class="product-img-block"></section>
 
     <section class="configurations">
         <h2>Configurations</h2>
@@ -145,7 +147,10 @@
                 <td>406 lb-ft @ 6300 rpm</td>
             </tr>
         </table>
-        <a href="#" class="buy-btn"><div>Buy Today</div></a>
+        <div class="product-btn-container">
+            <a href="#" >Buy Today</a>
+            <a href="#" >Book a Test Drive</a>
+        </div>
     </section>
 
 
