Home page fully responsive

--- a/about.html
+++ b/about.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Audi R8 Homepage">
+    <meta name="description" content="Audi R8 About">
     <meta name="robots" content="noindex, nofollow">
     <title>About</title>
+    <link rel="icon" type="image/x-icon" href="./img/r8-black-logo.png">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
     <!-- remove custom browser styles -->
