--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="description" content="Audi R8 Homepage">
     <meta name="robots" content="noindex, nofollow">
     <title>Home</title>
+    <link rel="icon" type="image/x-icon" href="./img/r8-black-logo.png">
     <!-- CSS -->
     <link rel="stylesheet" href="./css/styles.css">
     <!-- remove custom browser styles -->
@@ -83,7 +84,7 @@
             <img src="./img/gold-wheel.png" alt="car wheel with gold rims">
         </div>
         <small id="wheel-choice">20" milled cut design, anthracite black wheels</small>
-        <a href="#" class="buy-btn"><div>Buy Today</div></a>
+        <a href="https://www.audi.ca/ca/web/en/models/r8.html" target="_blank" class="buy-btn"><div>Buy Today</div></a>
     </section>
 
     <!-- closeup audi logo -->
@@ -256,7 +257,7 @@
                 <source src="./video/r8-test-drive.mp4" type="video/mp4">
             </video>
             <h2>Come in and try the Audi R8 today</h2>
-            <a href="#" class="test-drive-btn">Book a Test Drive</a>
+            <a href="https://www.audidowntowntoronto.com/audi-concierge.htm" target="_blank" class="test-drive-btn">Book a Test Drive</a>
         </div>
     </section>
 
@@ -270,8 +271,8 @@
             or up to 100,000 km from the original in-service date.
         </p>
         <div class="inventory-btn-container">
-            <a href="#" >Learn More</a>
-            <a href="#" >Browse Pre-Owned Inventory</a>
+            <a href="https://www.audi.ca/ca/web/en/cpo.html#layer=/ca/web/en/cpo/layer/Why-buy-certified.html" target="_blank" >Learn More</a>
+            <a href="https://www.audi.ca/ca/web/en/inventory.html" target="_blank" >Browse Pre-Owned Inventory</a>
         </div>
     </section>
 </main>
