Fixed home page and about page typos

--- a/about.html
+++ b/about.html
@@ -53,7 +53,7 @@
     <section class="about-audi">
         <h2>About the Audi R8</h2>
         <p>The Audi R8 is a 2-seater supercar, originally introduced in 2006.
-            The mid-engine supercar features a 5.2L V-10 engine, and develops 562 hp and 406 lb-ft of torque (select models).
+            The mid-engine supercar features a 5.2L V-10 engine, and develops 562HP and 406 lb-ft of torque (select models).
         It is currently available as a coupe or a convertible (spyder), and with Audi's
         all-wheel drive system: quattro.</p>
     </section>
