--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
                     <small>2012-2015</small>
                     <p>This Audi R8 model features a 5.2-liter V10 engine
                         (borrowed from the Lamborghini Gallardo). With
-                        this engine, the R8 could can to 100 kph in 3.7 seconds, and
+                        this engine, the R8 can speed up to 100 kph in 3.7 seconds, and
                         reach a top speed of 318 km/h!
                     </p>
                     <span class="right-arrow"></span>
@@ -200,7 +200,7 @@
                     <small>2021-Present</small>
                     <p>In 2021, Audi launched its rear-wheel drive Performance version due to the
                         success that the rear-wheel drive model had received. This version also received
-                        some small appearance changes such as a mate-black singleframe grill.
+                        some small appearance changes such as a matte-black singleframe grill.
                     </p>
                     <span class="right-arrow"></span>
                 </div>
